--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="library/grid.css" />
     <link rel="stylesheet" href="library/tools.css" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Balou Template</title>
 </head>
 
 <body>
